--- a/css/styles.css
+++ b/css/styles.css
@@ -2,14 +2,30 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-header {
+h1 {
+    color: #F6FA70;
+    text-align: center;
+    background: rgb(240,244,93);
+    background: linear-gradient(236deg, rgba(240,244,93,0.8006042296072508) 21%, rgba(78,154,235,1) 100%);
+}
+
+span {
+    font-size: 20px;
+    color: #0079FF;
+}
+
+/*header {
     background-color: #0079FF;
-    color: whitesmoke;
     text-align: center;
     height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
+}*/
+
+div {
+    background-color: yellowgreen;
+    border: 1px solid white;
 }
 
 label {
